--- a/src/components/UI/project/Project.module.css
+++ b/src/components/UI/project/Project.module.css
@@ -7,6 +7,9 @@
     display: flex;
     flex-direction: column;
     border-bottom: transparent;
+
+    position: relative;
+    z-index: 1;
 }
 
 
